--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^3.2.0",
     "eslint": "^6.3.0",
     "eslint-loader": "^3.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "style-loader": "^1.0.0",
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "file-loader": "^6.2.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
